Added games users relation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,14 @@
       </div>
     </div>
   </nav>
-  
-  
-  <%= yield %>
 
+
+<div class="container">
+  <% flash.each do |key, value| %>
+    <%= content_tag :div, value, class: "alert alert-#{key}" %>
+  <% end %>
+  <%= yield %>
+</div>
 </div>
 </body>
 </html>
