--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -7,6 +7,28 @@
     
 }
 
+body {
+    background: #ef8d3b;
+    background: -moz-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: -webkit-gradient(linear,left top,right top,color-stop(0%,#ef8d3b),color-stop(100%,#f9c657));
+    background: -webkit-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: -o-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: -ms-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: linear-gradient(to right,#ef8d3b 0%,#f9c657 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef8d3b',endColorstr='#f9c657',GradientType=1);
+}
+
+.button-custom {
+    background: #ef8d3b;
+    background: -moz-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: -webkit-gradient(linear,left top,right top,color-stop(0%,#ef8d3b),color-stop(100%,#f9c657));
+    background: -webkit-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: -o-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: -ms-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
+    background: linear-gradient(to right,#ef8d3b 0%,#f9c657 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef8d3b',endColorstr='#f9c657',GradientType=1);
+}
+
 .navbar-brand > img{
     
     width: 150px;
@@ -57,6 +79,7 @@
 //    position: relative;
     bottom: 51px;
     height: 400px;
+    margin-top: 50px;
 
 }
 
