--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -10,9 +10,14 @@
         <%= f.text_field :name, class: 'form-control' %>
     </div>
     
+    <div class="form-group">
+        <%= f.label :email%>
+        <%= f.text_field :address, class: 'form-control' %>
+    </div>
+    
     
     <div class="form-group">
-        <%= f.submit "Join the game", class: 'btn btn-primary'%>
+        <%= f.submit "Join the game", class: 'btn btn-custom'%>
     </div>
         
 <% end %>
