--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,12 +1,6 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-@font-face {
-        font-family: "Montserrat-Light";
-        src: url(/assets/Montserrat-Light.otf) format("truetype");
-    
-}
-
+// You can use Sass (SCSS) here: http://sass-lang.co
 body {
     background: #ef8d3b;
     background: -moz-linear-gradient(left,#ef8d3b 0%,#f9c657 100%);
