--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,8 @@
     <p>Players: <%= @game.users.length %></p>
     <br/>
     <%= link_to "Join the game", edit_game_path(id: @game.id), class: 'btn btn-custom btn-lg btn-block' %>
+    <%= link_to "Check who's playing", game_path(id: @game.id), class: 'btn btn-custom btn-lg btn-block' %>
+
   </div>
   <% end %>
 </div>
@@ -41,17 +43,5 @@
     </div>
 </div>
 
-<div class="col-md-6">
-  <div class="well">
-    <% if @game != nil%>
-    <h2 class="text-center">Next game:</h2>
-    <p>Address: <%= @game.address %></p>
-    <p>Time: <%= @game.time %></p>
-    <p>Players: 10</p>
-    <br/>
-    <%= link_to "Join the game", "#", class: 'btn btn-custom btn-lg btn-block' %>
-    <%end%>
-  </div>
-</div>
 <% end %>
 </row>
