--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,8 +1,29 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
-        <h1 class="text-center">Create your Profile</h1>
-        <p class="text-center">Be part of the Dev Match community by filling out your profile!</p>
-    
-        <%= render 'form' %>
+        <h1 class="text-center">Create new Game</h1>
+
+        <%= form_for @game, url: games_path do |f| %>
+            
+            <div class="form-group">
+                <%= f.label :name%>
+                <%= f.text_field :name, class: 'form-control' %>
+            </div>
+            
+            <div class="form-group">
+                <%= f.label :address%>
+                <%= f.text_field :address, class: 'form-control' %>
+            </div>
+            
+            <div class="form-group">
+                <%= f.label :time%>
+                <%= f.text_field :time, class: 'form-control' %>
+            </div>
+            
+            
+            <div class="form-group">
+                <%= f.submit "Create new Game", class: 'btn btn-custom'%>
+            </div>
+        
+        <% end %>
     </div>
 </div
