--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,7 +2,7 @@
     <div class="col-md-6 col-md-offset-3 well">
         <% @game.users.each_with_index do |u, index| %>
         
-        <%= index.to_s + " - " + u.name %> <br>
+        <%= index+1.to_s + " - " + u.name %> <br>
         
         <% end %>
     </div>
