--- a/app/views/game_mailer/weekly_game_email.html.erb
+++ b/app/views/game_mailer/weekly_game_email.html.erb
@@ -3,8 +3,8 @@
   <head>
   </head>
   <body>
-    <h1>Hey Criteos! %></h1>
-    <p>There's a new game this week on @ <%= "#{ @address }, on the #{ @date }. h#{ @time }" %></p>
+    <h1>Hey Criteos!</h1>
+    <p>There's a new game this week on @ <%= "#{ @address }, on #{ @date }. h#{ @time }" %></p>
     <p> !!!!!!!!!!!!!!! THIS IS A TEST !!!!!!!!!!!!!!!!!!!!!</p>
   </body>
 </html>
