--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -13,8 +13,8 @@
       <div class="well">
         <h2 class="text-center">Users</h2>
             
-        <%= link_to "Create user", new_user_registration_path, class: 'btn btn-custom btn-lg btn-block' %>
-        <%= link_to "Edit users", user_registration_path, class: 'btn btn-custom btn-lg btn-block' %>
+        <%= link_to "Create user", new_user_path, class: 'btn btn-custom btn-lg btn-block' %>
+        <%= link_to "Edit users", users_path, class: 'btn btn-custom btn-lg btn-block' %>
 
       </div>
     </div>
