--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,23 +1,24 @@
 <%= form_for @game, url: game_path(id: @game.id) do |f| %>
+
     
     <div class="form-group">
-        <p><%= @game.address %></p>
-        <p><%= @game.time %></p>
+        <%= f.label :Date%>
+        <%= f.text_field :name, class: 'form-control'%>
     </div>
     
     <div class="form-group">
-        <%= f.label :name%>
-        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.label :address%>
+        <%= f.text_field :address, class: 'form-control'%>
     </div>
     
     <div class="form-group">
-        <%= f.label :email%>
-        <%= f.text_field :address, class: 'form-control' %>
+        <%= f.label :time%>
+        <%= f.text_field :time, class: 'form-control'%>
     </div>
     
     
     <div class="form-group">
-        <%= f.submit "Join the game", class: 'btn btn-custom'%>
+        <%= f.submit "Update!", class: 'btn btn-custom'%>
     </div>
         
 <% end %>
