--- a/app/views/game_mailer/game_email.html.erb
+++ b/app/views/game_mailer/game_email.html.erb
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Hey <%= " #{@name}" %></h1>
-    <p>You subscribed to the last Criteo game that is @ <%= "#{ @address }, on the #{ @name }. h#{ @time }" %></p>
+    <p>You subscribed to the last Criteo game that is @ <%= "#{ @address }, on the #{ @date }. h#{ @time }" %></p>
     <p><%= @body %></p>
   </body>
 </html>
