Added fullwidth jumbo

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -41,6 +41,14 @@ body {
     position: relative;
     bottom: 70px;
     font-size: 50px;
+    letter-spacing: 5px;
+    
+    
+}
+
+.spacing{
+    
+    letter-spacing: 10px;
 }
 
 .col-md-12.no-padding{
