--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <div class="jumbotron text-center">
   <container></container>
     <h1 class="white montserrat">Criteo Football Club</h1>
-    <p class="lead white montserrat">Welcome! Join our next game!</p>
+    <p class="lead white montserrat spacing">Welcome! Join our next game!</p>
   </container>
 </div>
 </div>
