Minor UI improvements

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Next game</h1>
+<h1>Next game: <%= Game.find(params[:id]).name%>, <%=  Game.find(params[:id]).address%> h<%=  Game.find(params[:id]).time %></h1>
  
 <table class="table well">
     <thead class="thead-inverse">
