--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,26 +1,26 @@
 <h1>Next game: <%= Game.find(params[:id]).name%>, <%=  Game.find(params[:id]).address%> h<%=  Game.find(params[:id]).time %></h1>
- 
-<table class="table well">
-    <thead class="thead-inverse">
-        <tr>
-            <th>No.</th>
-            <th>Name</th>
-            <th>Email</th>
-        </tr>
-    </thead>
-    <tbody>
-        
-        <% @players.each_with_index do |u, index| %>
-          <tr>
-            <td><%= index+1 %></td>
-            <td><%= u.name %></td>
-            <td><%= u.email %></td>
-            <% if u.email == current_user.email%>
-                <td><%= link_to "Don't feel like playing?",  game_useroptout_path(game_id: params[:id], user:u.id), data: { confirm: "Are you sure?" }, class: 'btn btn-danger' %></td></br>
+<div class="table-responsive"> 
+    <table class="table well">
+        <thead class="thead-inverse">
+            <tr>
+                <th>No.</th>
+                <th>Name</th>
+                <th>Email</th>
+            </tr>
+        </thead>
+        <tbody>
+            
+            <% @players.each_with_index do |u, index| %>
+              <tr>
+                <td><%= index+1 %></td>
+                <td><%= u.name %></td>
+                <td><%= u.email %></td>
+                <% if u.email == current_user.email%>
+                    <td><%= link_to "Don't feel like playing?",  game_useroptout_path(game_id: params[:id], user:u.id), data: { confirm: "Are you sure?" }, class: 'btn btn-danger' %></td></br>
+                <% end %>
+              </tr>
             <% end %>
-          </tr>
-        <% end %>
-    </tbody>
-</table>
- 
+        </tbody>
+    </table>
+</div>
 <br>
