--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 
 <row>
 <div class="col-md-12 no-padding">
-<div class="jumbotron text-center">
-  <container></container>
+<div class="jumbotron custom-jumbo text-center">
+  <container>
     <h1 class="white montserrat">Criteo Football Club</h1>
     <p class="lead white montserrat spacing">Welcome! Join our next game!</p>
   </container>
