--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -42,10 +42,21 @@ body {
     bottom: 70px;
     font-size: 50px;
     letter-spacing: 5px;
-    
+    text-shadow: 4px 1px 0px white;
     
 }
 
+.jumbotron{
+    
+    margin-bottom: 50px !important;
+}
+
+.custom-jumbo{
+    
+    -webkit-box-shadow: 0px 14px 41px 3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 14px 41px 3px rgba(0,0,0,0.75);
+    box-shadow: 0px 14px 41px 3px rgba(0,0,0,0.75);
+}
 .spacing{
     
     letter-spacing: 10px;
@@ -132,6 +143,7 @@ body {
     font-family: "Montserrat-Light","Helvetica Neue",Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     font-weight: 700;
+    
 }
 
 .btn-custom {
