--- a/app/views/game_mailer/user_email.html.erb
+++ b/app/views/game_mailer/user_email.html.erb
@@ -5,5 +5,6 @@
   <body>
     <h1>Hey <%= " #{@name}" %></h1>
     <p>You're now part of Criteo Football! Your password is <%= "#{ @password}" %></p>
+    <p> sign up to the next game: <%= root_path %></p>
   </body>
 </html>
