--- a/app/views/game_mailer/weekly_game_email.html.erb
+++ b/app/views/game_mailer/weekly_game_email.html.erb
@@ -5,6 +5,6 @@
   <body>
     <h1>Hey Criteos!</h1>
     <p>There's a new game this week on @ <%= "#{ @address }, on #{ @date }. h#{ @time }" %></p>
-    <p> sign up here: <%= root_path %></p>
+    <p> sign up here: https://nameless-ocean-95018.herokuapp.com/</p>
   </body>
 </html>
