--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,46 @@
-<h2>Sign up</h2>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3 well">
+        <h1 class="text-center">Sign up</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= devise_error_messages! %>
+            
+              <div  class="form-group">
+                <%= f.label :email %><br />
+                <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+              </div>
+              
+              <div class="form-group">
+                <%= f.label :name %><br />
+                <%= f.text_field :name, class: 'form-control' %>
+              </div>
+              
+              <div class="form-group">
+                <%= f.label :role %><br />
+                <%= f.select :role_id, ['Goalkeeper', 'Defender', 'Midfielder', 'Striker'], {}, class: 'form-control' %>
+              </div>
+            
+              <div class="form-group">
+                <%= f.label :password %>
+                <% if @validatable %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+              </div>
+            
+              <div class="form-group">
+                <%= f.label :password_confirmation %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+              </div>
+            
+            
+              <div class="actions">
+                <%= f.submit "Sign up" %>
+              </div>
+            <% end %>
+            
+            <%= render "devise/shared/links" %>
+    </div>
+</div
 
-  <div  class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :role %><br />
-    <%= f.select :role_id, ['Goalkeeper', 'Defender', 'Midfielder', 'Striker'], {}, class: 'form-control' %>
-  </div>
 
-  <div class="form-group">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-  </div>
-
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
