changed jumbotron picture

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -36,11 +36,11 @@ body {
     font-size: 18px !important;
 }
 
-.text-center.custom-h{
+.custom-h{
     
     position: relative;
     bottom: 70px;
-    font-size: 50px;
+    font-size: 62px;
     letter-spacing: 5px;
     text-shadow: 4px 1px 0px white;
     
@@ -115,7 +115,7 @@ body {
     //background: -webkit-linear-gradient(to left, #FFB75E , #ED8F03); /* Chrome 10-25, Safari 5.1-6 */
     //background: linear-gradient(to left, #FFB75E , #ED8F03); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    background-image: url(https://pixabay.com/static/uploads/photo/2014/10/14/20/24/the-ball-488716_960_720.jpg);
+    background-image: url(https://i.imgur.com/5k4T2lJ.jpg);
     background-repeat: none;
     background-attachment: initial;
     background-position: center center;
