changed jumbotron picture

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -115,7 +115,7 @@ body {
     //background: -webkit-linear-gradient(to left, #FFB75E , #ED8F03); /* Chrome 10-25, Safari 5.1-6 */
     //background: linear-gradient(to left, #FFB75E , #ED8F03); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    background-image: url(https://i.imgur.com/5k4T2lJ.jpg);
+    background-image: url(https://images.unsplash.com/photo-1439736637365-748f240b24fb);
     background-repeat: none;
     background-attachment: initial;
     background-position: center center;
